sources/event-scraper-test2/minio/minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-workflow
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: s3
spec:
  rules:
  - host: minio-workflow.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
  tls:
  - hosts:
    - minio-workflow.codeformuenster.org
    secretName: minio-workflow-ingress-cert
